# AutEBook

./: .gitignore  Cargo.toml  LICENSE  README.md  log1.yml  scratch.rs  todo.txt
rr-to-epub/: Cargo.toml
rr-to-epub/src/: api.rs  cache.rs  epub.rs  main.rs
rr-to-epub/src/assets/: messages.txt
src/: api.rs  book.rs  cache.rs  epub.rs  koreader.rs  main.rs  parsing_utils.rs  request.rs  xml_ext.rs
src/assets/: messages.txt  styles.css
src/source/: fanficfare.rs  mod.rs  royalroad.rs
src/updater/: book.rs  cache.rs  epub.rs  fanficfare.rs  image.rs  mod.rs
src/updater/assets/: styles.css
src/updater/native/: api.rs  book.rs  cache.rs  epub.rs  image.rs  mod.rs  request.rs  xml_ext.rs
src/updater/native/assets/: styles.css
tests/ressources/: Zogarth - The Primal Hunter.epub
