[package]
name = "autebooks"
version = "0.1.0"
edition = "2021"
description = "Autebooks is used to automatically update e-books of webnovels with the latest chapters posted."
repository = "https://github.com/ValentinLeTallec/AutEBook"
readme = "README.md"
license-file = "LICENSE"
keywords = ["e-book", "fanficfare", "update"]
categories = ["command-line-utilities", "filesystem", "text-processing"]

[[bin]]
name = "autebooks"
path = "src/main.rs"

[features]
# default-feature = ["fanficfare"]
fanficfare = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.47"
eyre = "0.6.12"
colorful = "0.3.2"
epub = "2.1.2"
indicatif = { version = "0.17.11", features = ["rayon"] }
lazy-regex = "3.4.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
walkdir = "2.5.0"
derive_more = { version = "2", features = ["debug"] }
zip = { version = "2.6.1", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12.15", default-features = false, features = [
  "brotli",
  "gzip",
  "rustls-tls-webpki-roots",
  "blocking",
] }
tempfile = "3.19.1"
uuid = { version = "1.16.0", features = ["fast-rng", "v4"] }
scraper = "0.23.1"
dirs = "6.0.0"
xml-rs = "0.8.26"
image = "0.25.6"
bytes = "1.10.1"
webp = "0.3.0"
url = "2.5.4"
governor = "0.10.0"
