[package]
name = "autebooks"
version = "0.1.0"
edition = "2021"
description = "Autebooks is used to automatically update e-books of webnovels with the latest chapters posted."
repository = "https://github.com/ValentinLeTallec/AutEBook"
readme = "README.md"
license-file = "LICENSE"
keywords = ["e-book", "fanficfare", "update"]
categories = ["command-line-utilities", "filesystem", "text-processing"]

[[bin]]
name = "autebooks"
path = "src/main.rs"

[features]
default = ["koreader"]
fanficfare = []
koreader = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.60"
eyre = "0.6.12"
colorful = "0.3.2"
epub = "=2.1.4"
indicatif = { version = "0.18.2", features = ["rayon"] }
lazy-regex = "3.4.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
derive_more = { version = "2", features = ["debug"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }
scraper = "0.24.0"
dirs = "6.0.0"
xml = "1.0.0"
image = { version = "0.25.8", default-features = false, features = [
  "rayon",
  "jpeg",
  "png",
  "webp",
] }
bytes = "1.10.1"
url = "2.5.7"
governor = "0.10.1"
ignore = "0.4.25"
ureq = { version = "3.1.4", features = ["brotli"] }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
unwrap_used = "warn"
expect_used = "warn"
wildcard_enum_match_arm = "warn"
use_debug = "warn"
# missing_docs_in_private_items = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }
